# UAV

./: .gitignore  .gitmodules  Dockerfile.amd64  readme.md
.devcontainer/: devcontainer.json
app/: .mxproject  CMakeLists.txt  app.ioc  stm32h743vgtx_flash.ld
app/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
app/Core/Inc/config/: FreeRTOSConfig.h
app/Core/Src/: adc.c  gpio.c  main.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  usart.c
app/USB_DEVICE/App/: usbd_cdc_if.c
app/bsp/: CMakeLists.txt
app/bsp/Inc/: bsp_base_param.h  bsp_cli.h  bsp_event_group_interface.h  bsp_liquid_read.h  bsp_stream_buffer_interface.h
app/bsp/Src/: bsp_base_param.c  bsp_cli.c  bsp_event_group_interface.c  bsp_liquid_read.c  bsp_stream_buffer_interface.c
app/cmake/: gcc-arm-none-eabi.cmake
app/cmake/stm32cubemx/: CMakeLists.txt
